# cppwork

./: .gitignore  Dockerfile  README.md
AKFSF-Simulation-CPP/: CMakeLists.txt
AKFSF-Simulation-CPP/src/: display.cpp  kalmanfilter_ekf.cpp  kalmanfilter_lkf.cpp
_asio/sync_echo_tcp/: CMakeLists.txt  tcp_sync_echo_client.cpp  tcp_sync_echo_server.cpp
_cmake/step1/: CMakeLists.txt  tutorial.cpp  tutorial_config.h.in
_cmake/step3/: CMakeLists.txt
_cmake/step3/math_functions/: CMakeLists.txt
_cmake/step5/: CMakeLists.txt  tutorial.cpp  tutorial_config.h.in
_cmake/step5/math_functions/: CMakeLists.txt  mysqrt.cpp
_cpp11/lambda1/: CMakeLists.txt  funcs.hpp  main.cpp
_cpp11/localized_images/: CMakeLists.txt  main.cpp
_cpp11/shared_ptr_test/: CMakeLists.txt  main.cpp
_cpp11/vars/test/: CMakeLists.txt  vars_test.cpp
_cpp_templ/count_ptr/: CMakeLists.txt  allocator.hpp  countptr.hpp  main.cpp  memberrefcount.hpp  simplerefcount.hpp  stdarraypolicy.hpp  stdobjpolicy.hpp
_optimize/: CMakeLists.txt  strings_test.cpp
_performance_tools/1_address_issue/: CMakeLists.txt
_performance_tools/3_memory_issues/: CMakeLists.txt  main.cpp
_performance_tools/5_gnu_gprof/: CMakeLists.txt  main.cpp
_performance_tools/6_perf/: CMakeLists.txt  main.cpp
_simple_practice/_arrow/03_hdfs_write/: CMakeLists.txt  main.cpp
_simple_practice/boost_lexical_cast_test/: CMakeLists.txt  README.md  main.cpp
_tf/: ._using_py_model_in_cc  Dockerfile
_tf/test_fashion_fc_predict/: CMakeLists.txt  inspect_model.sh  tf_fashion_model_test.cpp
_tf/test_fashion_fc_predict/fashion_model/: saved_model.pb
_tf/test_tf_session/: CMakeLists.txt  conanfile.txt  tf_arthimatic_test.cpp  tf_cast_reduce_test.cpp  tf_const_test.cpp  tf_matmul_test.cpp  tf_pow_test.cpp  tf_random_normal_test.cpp  tf_random_uniform_test.cpp  tf_reduce_mean_sum_test.cpp  tf_session_test.cpp
_tuxing/op_dir/: CMakeLists.txt  audio_op.cpp  audio_op.h  cmdmanager.cpp  cmdmanager.h  common_header.h
_tuxing/op_dir/.metals/: metals.h2.db
_youxi/asio24/: .struct_header.h.swp  CMakeLists.txt  chat_message.h  client.cpp  server.cpp  struct_header.cpp  struct_header.h
_youxi/asio25/: CMakeLists.txt  chat_message.h  client.cpp  parse_msg.cpp  parse_msg.h  serilization_object.h  server.cpp
_youxi/asio27/: CMakeLists.txt  Protocal.pb.cc  Protocal.pb.h  Protocal.proto  chat_message.h  client.cpp  parse_msg.cpp  parse_msg.h  server.cpp
_youxi/inlinedemo/: CMakeLists.txt  main.cpp
_youxi/perf_tool/: CMakeLists.txt  README.md  chat_client.h  master.cpp  server.cpp  slave.cpp
_youxi/perf_tool/cases/: single_test.json
_youxi/perf_tool/conf/: master.conf  server.conf  slave.conf
_youxi/perf_tool/tasks/: request.h  task.h  task_launcher.cpp  task_launcher.h  task_reader.cpp  task_reader.h  task_summary.cpp  task_summary.h  url_parse.cpp  url_parse.h
_youxi/perf_tool/test/: CMakeLists.txt  cfg_test.cpp  guid_test.cpp  tasks_test.cpp
_youxi/perf_tool/utils/: cfg_reader.h  chat_message.h  const.h  guid_gen.cpp  guid_gen.h  parse_msg.cpp  parse_msg.h
apollo/: .apollo.bazelrc  WORKSPACE  bazel-apollo  bazel-bin  bazel-out  bazel-testlogs  demo01_talker.INFO  demo01_talker.log.INFO.20220831-121815.134072  demo02_listener.INFO  demo02_listener.log.INFO.20220831-121830.134392
design_pattern/41_adapter_caching/test/: CMakeLists.txt  rect_draw_test.cpp
include/api_accuracy/test/: CMakeLists.txt  app_perf_async_concurr_perf_test.cpp  app_perf_async_perf_test.cpp  app_perf_async_test.cpp  app_perf_neg_test.cpp  app_perf_perf_test.cpp  app_perf_test.cpp
include/api_accuracy/test/datas/app_perf/: apps_meta_data.json  demographics_age.json  demographics_gender.json  download_and_revenue.json  retention.json  sample_web_query.json  test547__200_ok_weekly_api_sync_async_equal_async  test547__200_ok_weekly_api_sync_async_equal_sync  test548__200_ok_by_apps_api_response  test548__200_ok_by_apps_api_sync_async_equal_sync  test548__200_ok_by_apps_api_sync_async_greater_async  test548__200_ok_by_apps_api_sync_async_greater_sync  test549__200_ok_all_countries_api_response  test549__200_ok_all_countries_api_sync_async_equal_async  test549__200_ok_all_countries_api_sync_async_greater_async  test549__200_ok_all_countries_api_sync_async_greater_sync  test550__200_ok_filter_device_api_response  test550__200_ok_filter_device_api_sync_async_equal_async  test550__200_ok_filter_device_api_sync_async_equal_sync  test550__200_ok_filter_device_api_sync_async_greater_async  test556__200_ok_missing_granularity_api_response  test556__200_ok_missing_granularity_api_sync_async_equal_async  test556__200_ok_missing_granularity_api_sync_async_equal_sync  test556__200_ok_missing_granularity_api_sync_async_greater_async  test561__200_param_all_metric_api_sync_async_equal_async  test561__200_param_all_metric_api_sync_async_greater_async  test561__200_param_all_metric_api_sync_async_greater_sync  test562__200_param_all_device_api_sync_async_equal_async  test562__200_param_all_device_api_sync_async_greater_sync  test_dim_parse_data.json  usage.json
include/api_accuracy/test/result/: ._app_performance_res.csv  ._result.csv  ._result_async_concurr_bak.csv  ._result_bak.csv  ._result_bak3.csv  README.md  app_performance_res.csv  demographics_res.csv  download_revenue_res.csv  product_metadata_res.csv  result.csv  result_async_concurr_bak.csv  result_bak.csv  result_bak3.csv  retention_res.csv  www_meta_info_res.csv
include/html-parser/src/: CMakeLists.txt  DOMInspector.cc
include/http/test/: CMakeLists.txt  http_util_test.cpp
matlab/: arr_and_struct.m  control_loop.m  data_type.m  first.slx  first_1.slx  first_1.slx.original  first_1.slxc  first_1_msf.mexa64  fourth_1.slx  fsc_checks.json  gen_c_code.sldd  gene_c_code.slx  gene_c_code.slxc  libex.slx  matlab.mat  matrix.m  matrix_2.m  my_k.sldd  plot1.m  plot3d.m  set_sim_param.m  slblocks.m  split_graph.m  stateflow_0.slx  stateflow_1_stm.slx  stateflow_2_logic_model.slx  stateflow_3_stm_car.slx  stateflow_3_stm_car.slxc  stm_car.sldd  third_1_debug.slx  thrid_1.slx  thrid_1_msf.mexa64  variables.m  (+4 more)
(+3192 files in other folders)
